# randomwalk

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/generators/: mod.rs  normal.rs
src/translators/: exponential.rs  lognormal.rs  mod.rs  uniform.rs
